.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b5 - Unreleased
------------------

4.0b4 - 2010-06-03
------------------

- Fix FactoryTool to mangle REQUEST.BASEn correctly.
  [elro]

- Updated the description_user_management default message in
  plone_deprecated/prefs_users_overview.cpt to be the same as
  plone/app/controlpanel/usergroups_usersoverview.pt
  [vincentfretin]

- Ensure text is shown for the various Collection views. This fixes
  http://dev.plone.org/plone/ticket/10226
  [pelle]

- Set the correct meta_type for files and images.
  [hannosch]

- Removed the Large Plone Folder portal_type and LargePloneFolder class.
  Instead, use a normal ATFolder from plone.app.folder, with its ``ordering``
  attribute set to u'unordered'. Existing Large Plone Folders will get
  migrated when upgrading from older versions of Plone.
  [davisagli]

- Removed empty HTML tags from listings when an item in the listing has no
  description.
  [spliter]

- Fix bad test for valid paste data in object_paste.
  [wichert]

- Remove deprecated IndexIterator class and tabindex html attribute
  [edegoute]

- Use a mask to visually highlight modal overlays. Configurable in
  popupforms.js. Set a common set of configuration options, defaulting
  to overlays that use absolute positioning.
  [smcmahon]

- Update the ZMI security tab warning so it doesn't display outside of a Plone
  site.  This fixes http://dev.plone.org/plone/ticket/10521.
  [davisagli]

- Get configlet icons directly from the action, rather than using the
  getIconFor helper.  This breaks the backwards-compatible fallback to the
  action icons tool, but avoids re-evaluating all action conditions for each
  configlet.
  [davisagli]

- Report expiration of password resets for registration as an absolute time,
  rather than a number of hours.
  [davisagli]
